// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders correctly 1`] = `
<section
  className="Section-d5a2e3-0 xlqez"
  color="primary"
/>
`;

exports[`Divider renders correctly with paddings 1`] = `
<section
  className="Section-d5a2e3-0 hKzUdn"
  color="primary"
/>
`;
